--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.current_session_context_class=thread
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
-## SQL
-spring.sql.init.mode=never
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
